Fixes small logos on mobile

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -644,17 +644,18 @@ p
     .sponsors-col-lg
       .sponsor
         flex: 1 1
-        width: 130px
+        width: 75%
 
     .sponsors-col-md
       .sponsor
         flex: 2 2
-        width: 65px
+        width: 60%
 
     .sponsors-col-sm
       .sponsor
         flex: 4 4
-        width: 40px
+        width: 50%
+        max-width: 50%
 
     .hosts
       margin-top: 0
